--- a/static/css/main.css
+++ b/static/css/main.css
@@ -44,7 +44,7 @@
         display: flex;
         flex-wrap: wrap-reverse;
         align-items: center;
-        margin: 0 15px;
+        margin: 0 25px;
         padding-top: 10px;
     }
 
@@ -59,9 +59,8 @@
     }
 
     .home-page__img {
-        display: flex;
-        align-items: center;
         width: 75%;
-        height: auto;
+        display: block;
+        margin: 0 auto;
     }
 }
