--- a/static/css/root.css
+++ b/static/css/root.css
@@ -4,6 +4,7 @@
     --white-color: #fff;
     --black-color: #333;
     --brown-color: #7a6960;
+    --bright-brown-color: #7a6960b7;
 
     --btn-background-color-hover: #fc7d47ee;
 
